# testrail_api_module

./: .bumpversion.cfg  .bumpversion.toml  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  FASTMCP_INTEGRATION_PLAN.md  LICENSE  MCP_FIX_PLAN.md  MIGRATION_GUIDE.md  README.md  REFACTORING_NOTES.md  TODO.md  dev-readme.md  generate_docs.py  pyproject.toml  requirements.txt  run_tests.py  test_json_position_36.py  test_mcp_call_simulation.py  test_mcp_list.py  test_mcp_protocol.py  test_mcp_response.py  test_schema_debug.py  test_tool_execution.py  testrail.skill  tox.ini
.claude/: settings.local.json
.claude/skills/api-parity-audit/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/testrail/: SKILL.md
.claude/skills/testrail/references/: cases-and-custom-fields.md  modules-quick-reference.md  workflows.md
.cursor/commands/: PR-into-main.md  publish-to-pypi.md  update-the-changelog.md
.cursor/rules/: markdown-standards.mdc  no-pdoc3.mdc  pep8-standards.mdc  python-development-standards.mdc  update changelog.mdc
.github/: ruleset-main-protection.json
.github/workflows/: publish.yml  publish_docs.yml  static.yml  tag-release.yml  tests.yml
docs/: COMMIT_CONVENTIONS.md  MCP_USAGE.md  PYPI_PUBLISHING_GUIDE.md  index.html  search.js  testrail_api_module.html
docs/testrail_api_module/: _common.html  attachments.html  bdd.html  case_fields.html  case_types.html  cases.html  configurations.html  datasets.html  groups.html  milestones.html  plans.html  priorities.html  projects.html  reports.html  result_fields.html  results.html  roles.html  runs.html  sections.html  shared_steps.html  statuses.html  suites.html  templates.html  tests.html  users.html  variables.html
examples/: refactored_usage.py
scripts/: mcp_server.py
src/testrail_api_module/: __init__.py  __init__.pyi  __main__.py  _common.py  attachments.py  attachments.pyi  base.py  base.pyi  bdd.py  bdd.pyi  case_fields.py  cases.py  cases.pyi  cli.py  cli.pyi  configurations.py  configurations.pyi  datasets.py  datasets.pyi  groups.py  groups.pyi  labels.py  labels.pyi  mcp_prompts.py  mcp_prompts.pyi  mcp_server.py  mcp_server.pyi  mcp_utils.py  mcp_utils.pyi  milestones.py  milestones.pyi  plans.py  plans.pyi  priorities.py  priorities.pyi  projects.py  projects.pyi  reports.py  reports.pyi  result_fields.py  (+23 more)
tests/: README.md  __init__.py  test-writing-standards.mdc  test_attachments.py  test_base.py  test_bdd.py  test_cases.py  test_cli.py  test_configurations.py  test_datasets.py  test_groups.py  test_init.py  test_labels.py  test_mcp_prompts.py  test_mcp_server.py  test_mcp_utils.py  test_milestones.py  test_plans.py  test_priorities.py  test_projects.py  test_reports.py  test_result_fields.py  test_results.py  test_roles.py  test_runs.py  test_sections.py  test_shared_steps.py  test_statuses.py  test_suites.py  test_templates.py  test_tests.py  test_users.py  test_variables.py
tests/mcp_tests/: test_mcp_list.py  test_mcp_protocol.py  test_schema.py  test_schema_debug.py  test_tool_execution.py
utilities/: README.md  __init__.py  build.py  build_and_release.py  deploy.py  generate_docs.py  generate_stubs.py  run_tests.py  test_deploy.py  update_version.py
