[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testrail_api_module"
version = "0.3.3"
description = "A simple wrapper for the TestRail API"
authors = [
    { name = "Matt Troutman", email = "github@trtmn.com" },
    { name = "Christian Thompson", email = "example@example.com" }
]
requires-python = ">=3.11"
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "requests>=2.32.0"
]

[project.optional-dependencies]
dev = [
    "pdoc>=14.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "mypy>=1.0.0",
    "bump-my-version>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "wheel>=0.40.0",
    "build>=1.0.0",
    "toml>=0.10.0",
    "python-dotenv>=1.0.0",
    "twine>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/trtmn/testrail_api_module"
Docs = 'https://trtmn.github.io/testrail_api_module/'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]



[tool.mypy]
python_version = "0.3.3"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Include stubs in the package
[tool.setuptools.package-data]
testrail_api_module = ["*.pyi", "py.typed"]
