[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testrail-api-module"
version = "0.7.0"
description = "A comprehensive Python wrapper for the TestRail API with enhanced error handling and performance improvements"
authors = [
    { name = "Matt Troutman", email = "github@trtmn.com" },
    { name = "Christian Thompson", email = "example@example.com" }
]
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
dependencies = [
    "mypy[dev]>=1.19.1",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pdoc>=14.0.0",
    "pip-audit[dev]>=2.10.0",
    "pytest>=8.4.2",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "mypy>=1.0.0",
    "toml>=0.10.0",
    "python-dotenv>=1.0.0",
    "pre-commit>=3.8.0",
    "ruff>=0.8.0",
    "bandit>=1.7.0",
    "detect-secrets>=1.5.0",
]

# Optional docs extra so consumers can install only what's needed to build docs
docs = [
    "pdoc>=14.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/trtmn/testrail_api_module"
Docs = 'https://trtmn.github.io/testrail_api_module/'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["src", ".venv", "venv", "build", "dist"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--ignore=src",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]



[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = ["__main__\\.pyi$"]

# Include stubs in the package
[tool.setuptools.package-data]
testrail_api_module = ["*.pyi", "py.typed"]

# Coverage configuration
[tool.coverage.run]
source = ["src/testrail_api_module"]
omit = [
    "*/utilities/*",
    "*/tests/*",
    "*/build/*",
    "*/dist/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# Ruff configuration for linting and formatting
[tool.ruff]
line-length = 79
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["testrail_api_module"]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "flake8>=7.3.0",
]
